Fixed floating bug in checkboxes in facets: if the font size is too small (smaller than the height of the checkbox image), then the checkboxes don't flush all the way to the right but cascades like a staircase.

--- a/exhibit/branches/2.0/src/webapp/api/bundle.css
+++ b/exhibit/branches/2.0/src/webapp/api/bundle.css
@@ -268,6 +268,7 @@ div.exhibit-facet-value {
     position:       relative;
     margin-left:    2em;
     padding:        2px 0px;
+    clear:          both;
 }
 div.exhibit-facet-value-selected {
     font-weight:    bold;
